# omea

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Changelog.txt  Changelog.txt.license  README.md  REUSE.toml  renovate.json.license
.github/workflows/: main.yml
.reuse/: dep5
Docs/: FilterAPI.doc
Docs/Doc/Help/: Formatting_Rules.swf  Help.chm
Docs/ExtendingOmea/: BookDisplayPane_DisplayResource.html  BookEditPane_EditResource.html  BookEditPane_Save.html  DeleteBookAction.html  EditBookAction.html  ExtendingOmea.html  IResourceDisplayer.html  NewBookAction.html  PropTypes.html  ResourceTypes.html  TextProvider.html  ViewsConstructor.html
Docs/Help/: FlashHelp.ssl  HtmlHelp.css  MS_Help.css  Microsoft HTML Help.ssl  New_Rule.swf  OmeaHelp.hhc_backup  OmeaHelp.hhp  OmeaHelp.pss  OmeaHelp.xpj  OmeaReader HTML Help.ssl  Printed Documentation.ssl  Pro CHM on Localhost.ssl  Reader CHM on Localhost.ssl  RoboInfo Output.ssl  WebHelp Enterprise.ssl  WebHelp Pro.ssl  WebHelp.ssl  WebHelp5.ssl  What_s_New_in_Omea_Pro.htm  XML Output.ssl  default.css  eHlpDhtm.js  files.htm  help.css  index.html  omea_help.htm  omeahelp.glo  omeahelp.hhc  omeahelp.hhk  omeahelp.ign  omeahelp.phr  omeahelp.ppf  omeahelp.stp  omeahelp.syn  rhakeyword.apj  rhbag.apj  rhbuildtag.apj  rhcolor.apj  rhfontset.apj  rhinfotype.apj  (+12 more)
Docs/Help/appendix/: acknowledgements.html  appendix.fpj  help_styles.html  license_agreement.html
Docs/Help/getstarted/: configuring_options.html  getstarted.fpj  getting_started.html  indexing_your_computers_resources.html
Docs/Help/organizing/: custom_properties.html  index.html  jetlistview_enhancements.htm  notify_me.html  organizing.fpj  organizing_using_categories.html  organizing_using_links.html  organizing_using_tasks.html  organizing_using_views.html  organizing_using_workspaces.html  organizing_your_resources.html  (+6 more)
Docs/Omea 2,1 Changelist/: Omea 2,1 Changelist Word.htm  Omea 2,1 Changelist.html
Docs/OpenAPI/: readme.html
Docs/Specs/: Favorites.mmap  Outlook.mmap  Tasks.mmap  Workspaces.mmap
Docs/visuals/: OptionsDialog.ppt
LICENSES/: LicenseRef-GPL-2.0-or-later.SharpZipLib-exception.txt  LicenseRef-Mentalis.org-BSD.txt  LicenseRef-OneNoteImporter.md  LicenseRef-RoboHELP.txt  LicenseRef-SP.Windows.txt  LicenseRef-VS2008-Redist.txt  LicenseRef-o2003PIA.txt
Lib/: AllAssemblies.Xml  MsiGuidCache.xml  Product.AssemblyVersion.Template.cs  Product.AssemblyVersion.Template.js  Product.AssemblyVersion.Template.vb
Lib/Data/: english.scr  oxford.lex  stopwords.eng
Lib/Distribution/: DeleteIndex.bat  InstallOmeaConnector.html  Third-Party Software.txt  wvHtml.xml  wvText.xml  wvWare.exe.license
Lib/References/: CookComputing.XmlRpc.dll.license  Microsoft.VC90.CRT.manifest  PicoContainer.dll.license  SourceLibrary.xml
Omea/Docs/: FilterAPI.doc.license  OmniaMea Feature Overview.doc
Omea/Lib/: AllAssemblies.Xml  MsiGuidCache.xml  Product.AssemblyVersion.Template.cs  Product.AssemblyVersion.Template.js  Product.AssemblyVersion.Template.vb
Omea/Setup/: Build.proj  Files.wxs  Installer.After.Wix.Targets  Installer.Before.Wix.Targets  Installer.csproj  Main.wxs  Property.wxs  StdAfx.wxi
Omea/Src/: Default.build  Omea.4.0.resharper  Omea.sln  OmeaCompile.build  OmeaTest.build  OmniaMea.FxCop  OmniaMea.build  OmniaMea.ndoc  OmniaMeaSpec.xml  OmniaMeaTests.nunit  since-tag.xslt
Setup/: Build.proj  Files.wxs  Installer.After.Wix.Targets  Installer.Before.Wix.Targets  Installer.csproj  Installer.sln  Main.wxs  Property.wxs  StdAfx.wxi
Setup/Files/: License.rtf
Src/: Default.build  Directory.Build.props  MyPalDB.vsd  Omea.4.0.resharper  Omea.sln  Omea.sln.DotSettings  Omea.sln.license  OmeaCompile.build  OmeaTest.build  OmniaMea.FxCop  OmniaMea.build  OmniaMea.ndoc  OmniaMeaSpec.xml  OmniaMeaTests.nunit  since-tag.xslt
Src/.config/: dotnet-tools.json  dotnet-tools.json.license
Src/Core/: OmeaCore.sln
Src/Plugin/Primary/wvWare/: GNUmakefile.am  GNUmakefile.in  README.JetBrains  acinclude.m4  aclocal.m4  anld.c  anlv.c  asumy.c  asumyi.c  atrd.c  autogen.sh  basename.c  bintree.c  bkd.c  bkf.c  bkl.c  blip.c  bmptopng.c  brc.c  bte.c  bx.c  chp.c  clx.c  config.h.in  configure  configure.ac  configure.in  crc32.c  dcs.c  decode_complex.c  decode_simple.c  decompresswmf.c  decrypt95.c  decrypt97.c  defcharset.c  dogrid.c  dop.c  doptypography.c  dttm.c  error.c  (+83 more)
Src/Plugin/Primary/wvWare/expat/: GNUmakefile.am  GNUmakefile.in  fake.c
Src/Plugin/Primary/wvWare/expat/xmlparse/: GNUmakefile.am  GNUmakefile.in  hashtable.c  xmlparse.c
Src/Plugin/Primary/wvWare/expat/xmltok/: GNUmakefile.am  GNUmakefile.in  dllmain.c  xmlrole.c  xmltok.c  xmltok_impl.c  xmltok_ns.c
Src/Plugin/Primary/wvWare/exporter/: GNUmakefile.am  GNUmakefile.in  anld.c  anlv.c  asumy.c  asumyi.c  atrd.c  bkd.c  bkf.c  bkl.c  brc.c  bte.c  bx.c  chp.c  dcs.c  dogrid.c  dop.c  doptypography.c  dttm.c  fdoa.c  ffn.c  fib.c  filetime.c  fld.c  font.c  frd.c  fspa.c  ftxbxs.c  generic.c  lfo.c  lspd.c  lst.c  lvl.c  numrm.c  olst.c  pcd.c  pgd.c  phe.c  prm.c  rr.c  (+13 more)
Src/Plugin/Primary/wvWare/glib-wv/: GNUmakefile.am  GNUmakefile.in  garray.c  glib.h  glist.c  gmem.c  gmessages.c  gslist.c  gstrfuncs.c  gtree.c
Src/Plugin/Primary/wvWare/help/: GNUmakefile.in
Src/Plugin/Primary/wvWare/help/man/: GNUmakefile.am  GNUmakefile.in
Src/Plugin/Primary/wvWare/libole2/: GNUmakefile.am  GNUmakefile.in  ms-ole-gnomevfs.h  ms-ole-summary.c  ms-ole-vba.h  ms-ole.c  ms-ole.h
Src/Plugin/Primary/wvWare/magick/: GNUmakefile.am  GNUmakefile.in  api.h  blob.c  bmp.c  colors.c  compress.c  error.c  image.c  magick.c  magick.h  memory.c  memory.h  png.c  signature.c  transform.c  utility.c  utility.h
Src/Plugin/Primary/wvWare/oledecod/: GNUmakefile.am  GNUmakefile.in  oledecod.c  oledecod.h  support.h
Src/Plugin/Primary/wvWare/patterns/: GNUmakefile.in
Src/Plugin/Primary/wvWare/wingdingfont/: GNUmakefile.in
Src/Plugin/Primary/wvWare/xml/: GNUmakefile.in
Tools/MSBuild/: Build.proj
Tools/RegisterPlugin/: Build.proj
Tools/XsdCs/: Build.proj
trunk/Omea/: Changelog.txt
(+6140 files in other folders)
